// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> renders 1`] = `
<form
  class="form__Base-sc-1grfi8t-0 hLGYyj"
>
  <h2
    class="form__Title-sc-1grfi8t-1 ekfsMg"
  >
    Sign up form
  </h2>
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="email"
    placeholder="Email"
  />
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="password"
    placeholder="Password"
    type="password"
  />
  <button
    class="form__Button-sc-1grfi8t-3 ijFtjC"
    disabled=""
  >
    Sign up
  </button>
  <p
    class="form__ErrorText-sc-1grfi8t-4 ioXfqK"
  />
  <p
    class="form__LoadingText-sc-1grfi8t-5 hVQvTy"
  />
</form>
`;

exports[`<Form /> renders with disabled button 1`] = `
<form
  class="form__Base-sc-1grfi8t-0 hLGYyj"
>
  <h2
    class="form__Title-sc-1grfi8t-1 ekfsMg"
  />
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="email"
    placeholder="Email"
  />
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="password"
    placeholder="Password"
    type="password"
  />
  <button
    class="form__Button-sc-1grfi8t-3 ijFtjC"
    disabled=""
  >
    Sign up
  </button>
  <p
    class="form__ErrorText-sc-1grfi8t-4 ioXfqK"
  />
  <p
    class="form__LoadingText-sc-1grfi8t-5 hVQvTy"
  />
</form>
`;

exports[`<Form /> renders with error 1`] = `
<form
  class="form__Base-sc-1grfi8t-0 hLGYyj"
>
  <h2
    class="form__Title-sc-1grfi8t-1 ekfsMg"
  />
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="email"
    placeholder="Email"
  />
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="password"
    placeholder="Password"
    type="password"
  />
  <button
    class="form__Button-sc-1grfi8t-3 ijFtjC"
    disabled=""
  />
  <p
    class="form__ErrorText-sc-1grfi8t-4 ioXfqK"
  >
    Error
  </p>
  <p
    class="form__LoadingText-sc-1grfi8t-5 hVQvTy"
  />
</form>
`;

exports[`<Form /> renders with loading text 1`] = `
<form
  class="form__Base-sc-1grfi8t-0 hLGYyj"
>
  <h2
    class="form__Title-sc-1grfi8t-1 ekfsMg"
  />
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="email"
    placeholder="Email"
  />
  <input
    class="form__Input-sc-1grfi8t-2 czvKJK"
    name="password"
    placeholder="Password"
    type="password"
  />
  <button
    class="form__Button-sc-1grfi8t-3 ijFtjC"
    disabled=""
  />
  <p
    class="form__ErrorText-sc-1grfi8t-4 ioXfqK"
  />
  <p
    class="form__LoadingText-sc-1grfi8t-5 hVQvTy"
  >
    Loading!
  </p>
</form>
`;
